# VSDocks

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Export.h  VSDockManager.cpp  VSDockManager.h  VSDockWidget.cpp  VSDockWidget.h
